Complete 3-rd lab