@@ -15,7 +15,7 @@ public class Producer implements Runnable {
             for (var i = 0; i < iterations; i++) {
                 var value = Math.random();
                 buffer.put(value);
-                System.out.println(String.format("Thread #%s\nThe value %s has been added to the buffer\n", Thread.currentThread().getId(), value));   
+                System.out.println(String.format("Thread #%s\nThe value %s has been added to the buffer\n", Thread.currentThread().threadId(), value));   
             }
         } catch (InterruptedException e) {
             throw new RuntimeException(e);
